[Add] hands_on_machine_learning/chapter_09.ipynb

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ __pycache__
 python/ai/NLP/content/
 python/ai/NLP/nlpbook
 python/data_analysis/datasets
+python/ai/hands_on_machine_learning/images
