[Add] hands_on_machine_learning/chapter_13.ipynb
edit misspelled path

--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,6 @@ __pycache__
 python/ai/NLP/content/
 python/ai/NLP/nlpbook
 python/data_analysis/datasets
+python/ai/hands_on_machine_learning/datasets
 python/ai/hands_on_machine_learning/images
 python/ai/hands_on_machine_learning/my_logs
