[Add] pytorch_basic

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ python/data_analysis/datasets
 python/ai/hands_on_machine_learning/datasets
 python/ai/hands_on_machine_learning/images
 python/ai/hands_on_machine_learning/my_logs
+python/ai/pytorch_basic/data
